--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ sans-serif;
     padding-bottom: 50px;
     display: flex;
     justify-content: space-between;
+    margin: -20px;
 }
 .card{
     position: relative;
@@ -162,7 +163,8 @@ sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100%;
+    flex: 50%;
+    margin: 20px;
 }
 .card::before {
     z-index: -1;
@@ -199,6 +201,9 @@ sans-serif;
     line-height: 23px;
     margin-bottom: 8px;
 }
+.delivery-week {
+    padding: 100px 0;
+}
 .card-delivery{
     display: block;
     font-weight: 500;
@@ -214,4 +219,213 @@ sans-serif;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+h2.section-title{
+   font-weight: 500;
+   font-size: 32px;
+   line-height: 23px;
+   margin-bottom: 47px;
+   margin-top: 0;
+}
+.delivery-cards{
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+}
+.delivery-card {
+    margin: 15px;
+    width: 275px;
+    height: 182px;
+    border-radius: 18px;
+    overflow: hidden;
+    position: relative;
+}
+.delivery-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.delivery-tag{
+    position: absolute;
+    left: 10px;
+    top: 16px;
+    border-radius: 30px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #49494F;
+    padding: 5px 10px;
+}
+.tag-color-1{
+    background: #D0FD89;
+}
+.tag-color-2 {
+    background: #AEBC41;
+}
+.tag-color-3 {
+    background: #B86B78;
+}
+.tag-color-4 {
+    background: #D68334;
+}
+.tag-color-5 {
+    background: #CD6255;
+}
+.tag-color-6 {
+    background: #FFFDBF;
+}
+.tag-color-7 {
+    background: #F6FDC8;
+}
+.tag-color-8 {
+    background: #FEF7FE;
+}
+.section-grey {
+    background: #F6F6F6;
+}
+.category{
+    padding-top: 40px;
+    padding-bottom: 60px;
+}
+.tabs{
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    margin-bottom: 62px;
+}
+.tabs-link{
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 23px;
+    text-decoration: none;
+    color: #49494F;
+    margin-right: 58px;
+}
+.tabs-link.active{
+    color: #F37321;
+}
+.tabs-content{
+    display: flex;
+    justify-content: space-between;
+}
+.tabs-card{
+    max-width: 270px;
+    border-radius: 20px;
+    overflow: hidden;
+    background: #fff;
+}
+.tabs-image{
+    max-width: 100%;
+}
+.tabs-card-content{
+    padding: 23px;
+}
+.tabs-title{
+    margin-top: 0;
+    margin-bottom: 13px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+}
+.tabs-description{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 23px;
+    color: #B9B9BE;
+}
+.tabs-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.tabs-price{
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 23px;
+    color: #4B4B51;
+    display: block;
+    margin-bottom: 5px;
+}
+.tabs-weight{
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 20px;
+    color: #AAAAB1;
+}
+.button-outline{
+    cursor: pointer;
+    background-color: transparent;
+    color: #F37321;
+    border: 2px solid #F37321;
+    box-sizing: border-box;
+    border-radius: 33px;
+    padding: 16px 25px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+}
+.button-center{
+    display: block;
+    margin: auto;
+    margin-top: 60px;
+    width: 315px;
+}
+.benefits{
+    padding-top: 100px;
+}
+.benefits-cards{
+    display: flex;
+    justify-content: space-between;
+}
+.benefits-card{
+    border: 1px solid #E9E9E9;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+    max-width: 270px;
+    min-height: 296px;
+    padding: 25px;
+    text-align: center;
+    margin-bottom: 202px;
+}
+.benefits-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 23px;
+    color: #000000;
+}
+.benefits-description{
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    color: #49494F;
+}
+.footer{
+    padding: 40px 0;
+    background: #F6F6F6;
+}
+.footer-wrapper{
+    display: flex;
+    align-items: center;
+}
+.footer-logo{
+    margin-right: 50px;
+}
+.footer-link{
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    text-decoration-line: underline;
+    color: #000000;
+    margin-right: 50px;
+}
+.social-links{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+.social-link{
+    margin-left: 20px;
+    text-decoration: none;
 }
